--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -1,42 +1,160 @@
-name: iOS-ipa-build
+name: Build Flutter App with iOS Codesigning
 
 on:
   workflow_dispatch:
+  push:
+    branches: [ main, master ]
+    tags:
+      - 'v*'
 
 jobs:
-  build-ios:
-    name: 🎉 1st iOS Build
-    runs-on: macos-latest
+  setup:
+    name: 🔧 Setup
+    runs-on: ubuntu-latest
+    outputs:
+      version: ${{ steps.get_version.outputs.version }}
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout Repository
+        uses: actions/checkout@v3
 
-      - uses: subosito/flutter-action@v2
+      - name: Get Version
+        id: get_version
+        run: |
+          if [[ ${{ github.ref }} == refs/tags/* ]]; then
+            echo "version=${GITHUB_REF#refs/tags/}" >> $GITHUB_OUTPUT
+          else
+            echo "version=${{ github.run_number }}" >> $GITHUB_OUTPUT
+          fi
+
+  build-android:
+    name: 🤖 Android Build
+    runs-on: ubuntu-latest
+    needs: setup
+    steps:
+      - name: Checkout Repository
+        uses: actions/checkout@v3
+
+      - name: Setup Java
+        uses: actions/setup-java@v3
+        with:
+          distribution: 'temurin'
+          java-version: '17'
+
+      - name: Setup Flutter
+        uses: subosito/flutter-action@v2
         with:
           channel: 'stable'
-          architecture: x64
-      - run: flutter pub get
-      
+          cache: true
+          cache-key: flutter-${{ runner.os }}-stable
 
-      - run: pod repo update
-        working-directory: ios
+      - name: Get Dependencies
+        run: flutter pub get
 
-      - run: flutter build ios --release --no-codesign
+      - name: Build APK
+        run: flutter build apk --release --build-name=1.0.${{ needs.setup.outputs.version }} --build-number=${{ needs.setup.outputs.version }}
 
-      - run: mkdir Payload
-        working-directory: build/ios/iphoneos
+      - name: Build App Bundle
+        run: flutter build appbundle --release --build-name=1.0.${{ needs.setup.outputs.version }} --build-number=${{ needs.setup.outputs.version }}
 
-      - run: mv Runner.app/ Payload
-        working-directory: build/ios/iphoneos
-
-      - name: Zip output
-        run: zip -qq -r -9 FlutterIpaExport.ipa Payload
-        working-directory: build/ios/iphoneos
-
-      - name: Upload binaries to release
-        uses: svenstaro/upload-release-action@v2
+      - name: Upload APK
+        uses: actions/upload-artifact@v3
         with:
-          repo_token: ${{ secrets.GITHUB_TOKEN }}
-          file: build/ios/iphoneos/FlutterIpaExport.ipa
-          tag: v1.0
-          overwrite: true
-          body: "This is first release"
+          name: android-release
+          path: |
+            build/app/outputs/flutter-apk/app-release.apk
+            build/app/outputs/bundle/release/app-release.aab
+
+  build-ios:
+    name: 🍎 iOS Build
+    runs-on: macos-latest
+    needs: setup
+    env:
+      APP_VERSION: 1.0.${{ needs.setup.outputs.version }}
+      BUILD_NUMBER: ${{ needs.setup.outputs.version }}
+    
+    steps:
+      - name: Checkout Repository
+        uses: actions/checkout@v3
+
+      - name: Setup Flutter
+        uses: subosito/flutter-action@v2
+        with:
+          channel: 'stable'
+          cache: true
+
+      - name: Get Dependencies
+        run: |
+          flutter pub get
+          cd ios
+          pod install
+
+      - name: Set up Xcode
+        uses: maxim-lobanov/setup-xcode@v1
+        with:
+          xcode-version: latest-stable
+
+      - name: Build iOS Archive
+        run: |
+          cd ios
+          xcodebuild -workspace Runner.xcworkspace \
+            -scheme Runner \
+            -configuration Release \
+            -destination generic/platform=iOS \
+            -archivePath $PWD/build/Runner.xcarchive \
+            clean archive
+
+      - name: Export IPA
+        run: |
+          cd ios
+          xcodebuild -exportArchive \
+            -archivePath $PWD/build/Runner.xcarchive \
+            -exportOptionsPlist $PWD/ExportOptions.plist \
+            -exportPath $PWD/build \
+            -allowProvisioningUpdates
+
+      - name: Upload IPA
+        uses: actions/upload-artifact@v3
+        with:
+          name: ios-release
+          path: ios/build/Runner.ipa
+
+  create-release:
+    name: 🚀 Create Release
+    runs-on: ubuntu-latest
+    needs: [setup, build-android, build-ios]
+    if: github.event_name == 'push' || github.event_name == 'workflow_dispatch'
+    
+    steps:
+      - name: Download Android Artifacts
+        uses: actions/download-artifact@v3
+        with:
+          name: android-release
+
+      - name: Download iOS Artifact
+        uses: actions/download-artifact@v3
+        with:
+          name: ios-release
+
+      - name: Create Release
+        uses: softprops/action-gh-release@v1
+        with:
+          tag_name: v1.0.${{ needs.setup.outputs.version }}
+          name: Release v1.0.${{ needs.setup.outputs.version }}
+          body: |
+            ### 📱 Flutter App Release
+            
+            **Build Details:**
+            - Version: 1.0.${{ needs.setup.outputs.version }}
+            - Commit: ${{ github.sha }}
+            - Date: ${{ github.event.head_commit.timestamp }}
+            
+            **Artifacts:**
+            - Android APK (`app-release.apk`)
+            - Android App Bundle (`app-release.aab`)
+            - iOS IPA (`Runner.ipa`)
+          files: |
+            app-release.apk
+            app-release.aab
+            Runner.ipa
+          draft: false
+          prerelease: false
